@@ -1,6 +1,14 @@
 package com.chatbot.storage.server.service;
 
-import com.chatbot.storage.config.StorageProperties;
+import com.chatbot.storage.server.config.StorageProperties;
+import com.chatbot.storage.server.dto.PresignedUrlDto;
+import com.chatbot.storage.server.event.FileCreated;
+import com.chatbot.storage.server.event.FileDeleted;
+import com.chatbot.storage.server.event.StorageEventEmitter;
+import com.chatbot.storage.server.model.FileMeta;
+import com.chatbot.storage.server.model.UploadResult;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.runtime.StartupEvent;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.enterprise.event.Observes;
@@ -14,7 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.eclipse.microprofile.faulttolerance.CircuitBreaker;
 import org.jboss.logging.Logger;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -34,15 +41,6 @@ import software.amazon.awssdk.services.s3.model.Tagging;
 import software.amazon.awssdk.services.s3.presigner.S3Presigner;
 import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
 
-/**
- * Service layer for file storage operations.
- *
- * <p>Provides business logic for file management including upload, download, metadata handling, and
- * search. All storage operations are protected by circuit breakers for fault tolerance.
- *
- * <p>This service uses AWS S3 SDK which is compatible with S3-compatible storage backends including
- * RustFS, MinIO, Ceph, and AWS S3.
- */
 @ApplicationScoped
 public class StorageService {
 
@@ -50,46 +48,28 @@ public class StorageService {
   private static final String METADATA_FILENAME = "filename";
   private static final String METADATA_CREATED_AT = "created-at";
 
-  /**
-   * File metadata record.
-   *
-   * @param id unique file identifier (same as object key)
-   * @param filename original filename
-   * @param size file size in bytes
-   * @param mimeType MIME type
-   * @param objectKey storage object key
-   * @param createdAt file creation timestamp
-   */
-  public record FileMeta(
-      UUID id,
-      String filename,
-      long size,
-      String mimeType,
-      String objectKey,
-      OffsetDateTime createdAt) {}
-
-  /**
-   * Result of a successful file upload.
-   *
-   * @param fileId unique file identifier
-   * @param objectKey storage object key (currently same as fileId)
-   */
-  public record UploadResult(UUID fileId, String objectKey) {}
-
   private final S3Client s3Client;
   private final S3Presigner s3Presigner;
-  private final StorageProperties properties;
+  private final StorageEventEmitter events;
+  private final ObjectMapper objectMapper;
   private final String bucketName;
+  private final Duration presignedUrlExpiration;
 
   @Inject
-  public StorageService(S3Client s3Client, S3Presigner s3Presigner, StorageProperties properties) {
+  public StorageService(
+      S3Client s3Client,
+      S3Presigner s3Presigner,
+      StorageProperties properties,
+      StorageEventEmitter events,
+      ObjectMapper objectMapper) {
     this.s3Client = s3Client;
     this.s3Presigner = s3Presigner;
-    this.properties = properties;
+    this.events = events;
+    this.objectMapper = objectMapper;
     this.bucketName = properties.bucketName();
+    this.presignedUrlExpiration = properties.presignedUrl().expiration();
   }
 
-  /** Ensures the storage bucket exists on application startup. */
   void onStart(@Observes StartupEvent event) {
     LOG.infof("Initializing storage service with bucket: %s", bucketName);
     try {
@@ -102,26 +82,18 @@ public class StorageService {
     }
   }
 
-  /**
-   * Uploads a file to storage with optional tags.
-   *
-   * @param filename original filename
-   * @param mimeType MIME type
-   * @param data input stream containing file data
-   * @param size file size in bytes
-   * @param tags optional metadata tags
-   * @return upload result with generated file ID and object key
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
       successThreshold = 2,
       failureRatio = 0.5)
   public UploadResult upload(
-      String filename, String mimeType, InputStream data, long size, Map<String, String> tags) {
+      String filename, String mimeType, InputStream data, long size, String tagsJson) {
 
     UUID fileId = UUID.randomUUID();
     String objectKey = fileId.toString();
+    String effectiveMimeType =
+        (mimeType != null && !mimeType.isBlank()) ? mimeType : "application/octet-stream";
 
     Map<String, String> metadata = new HashMap<>();
     metadata.put(METADATA_FILENAME, filename);
@@ -131,55 +103,39 @@ public class StorageService {
         PutObjectRequest.builder()
             .bucket(bucketName)
             .key(objectKey)
-            .contentType(mimeType)
+            .contentType(effectiveMimeType)
             .metadata(metadata);
 
-    if (tags != null && !tags.isEmpty()) {
+    Map<String, String> tags = parseTags(tagsJson);
+    if (!tags.isEmpty()) {
       requestBuilder.tagging(buildTagging(tags));
     }
 
     s3Client.putObject(requestBuilder.build(), RequestBody.fromInputStream(data, size));
-
     LOG.infof(
         "File uploaded successfully: fileId=%s, filename=%s, size=%d", fileId, filename, size);
+
+    events.fileCreated(
+        new FileCreated(
+            fileId,
+            filename,
+            objectKey,
+            effectiveMimeType,
+            size,
+            OffsetDateTime.now(ZoneOffset.UTC)));
 
     return new UploadResult(fileId, objectKey);
   }
 
-  /**
-   * Retrieves file metadata without downloading the file content.
-   *
-   * @param fileId unique file identifier
-   * @return file metadata
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
       successThreshold = 2,
       failureRatio = 0.5)
   public FileMeta getFileMeta(UUID fileId) {
-    String objectKey = fileId.toString();
-    HeadObjectResponse response =
-        s3Client.headObject(HeadObjectRequest.builder().bucket(bucketName).key(objectKey).build());
-
-    Map<String, String> metadata = response.metadata();
-    return new FileMeta(
-        fileId,
-        metadata.getOrDefault(METADATA_FILENAME, objectKey),
-        response.contentLength(),
-        response.contentType(),
-        objectKey,
-        parseTimestamp(metadata.get(METADATA_CREATED_AT)));
+    return fetchFileMeta(fileId);
   }
 
-  /**
-   * Downloads a file as an input stream.
-   *
-   * <p>The caller is responsible for closing the returned stream.
-   *
-   * @param fileId unique file identifier
-   * @return input stream containing file data
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
@@ -187,59 +143,40 @@ public class StorageService {
       failureRatio = 0.5)
   public InputStream download(UUID fileId) {
     String objectKey = fileId.toString();
-    LOG.debugf("Downloading file: fileId=%s", fileId);
     return s3Client.getObject(GetObjectRequest.builder().bucket(bucketName).key(objectKey).build());
   }
 
-  /**
-   * Deletes a file from storage.
-   *
-   * @param fileId unique file identifier
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
       successThreshold = 2,
       failureRatio = 0.5)
   public void delete(UUID fileId) {
-    String objectKey = fileId.toString();
-    s3Client.deleteObject(DeleteObjectRequest.builder().bucket(bucketName).key(objectKey).build());
+    FileMeta meta = fetchFileMeta(fileId);
+    s3Client.deleteObject(
+        DeleteObjectRequest.builder().bucket(bucketName).key(meta.objectKey()).build());
+    events.fileDeleted(
+        new FileDeleted(fileId, meta.objectKey(), OffsetDateTime.now(ZoneOffset.UTC)));
     LOG.infof("File deleted successfully: fileId=%s", fileId);
   }
 
-  /**
-   * Generates a presigned URL for temporary file access.
-   *
-   * @param fileId unique file identifier
-   * @return presigned URL valid for the configured duration
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
       successThreshold = 2,
       failureRatio = 0.5)
-  public String generatePresignedUrl(UUID fileId) {
+  public PresignedUrlDto generatePresignedUrl(UUID fileId) {
     String objectKey = fileId.toString();
-    Duration expiration = properties.presignedUrl().expiration();
     GetObjectPresignRequest presignRequest =
         GetObjectPresignRequest.builder()
-            .signatureDuration(expiration)
+            .signatureDuration(presignedUrlExpiration)
             .getObjectRequest(req -> req.bucket(bucketName).key(objectKey))
             .build();
-
     String url = s3Presigner.presignGetObject(presignRequest).url().toString();
-    LOG.debugf("Generated presigned URL for fileId=%s", fileId);
-    return url;
+    OffsetDateTime expiresAt = OffsetDateTime.now(ZoneOffset.UTC).plus(presignedUrlExpiration);
+    return new PresignedUrlDto(url, expiresAt);
   }
 
-  /**
-   * Searches for files based on optional filters.
-   *
-   * @param prefix optional object key prefix filter
-   * @param mimeType optional MIME type filter
-   * @param limit maximum number of results
-   * @return list of matching file metadata
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
@@ -257,7 +194,7 @@ public class StorageService {
         .map(
             obj -> {
               try {
-                return getFileMeta(UUID.fromString(obj.key()));
+                return fetchFileMeta(UUID.fromString(obj.key()));
               } catch (Exception e) {
                 LOG.warnf("Failed to retrieve metadata for object: %s", obj.key());
                 return null;
@@ -265,16 +202,9 @@ public class StorageService {
             })
         .filter(Objects::nonNull)
         .filter(file -> mimeType == null || mimeType.equals(file.mimeType()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  /**
-   * Updates tags on an existing file.
-   *
-   * @param fileId unique file identifier
-   * @param tags new tags to apply
-   * @return updated file metadata
-   */
   @CircuitBreaker(
       requestVolumeThreshold = 4,
       delay = 5000,
@@ -288,18 +218,38 @@ public class StorageService {
             .key(objectKey)
             .tagging(buildTagging(tags))
             .build());
-    LOG.debugf("Updated tags for fileId=%s", fileId);
-    return getFileMeta(fileId);
+    return fetchFileMeta(fileId);
   }
 
-  // --- Private helpers ---
+  private FileMeta fetchFileMeta(UUID fileId) {
+    String objectKey = fileId.toString();
+    HeadObjectResponse response =
+        s3Client.headObject(HeadObjectRequest.builder().bucket(bucketName).key(objectKey).build());
+    Map<String, String> metadata = response.metadata();
+    return new FileMeta(
+        fileId,
+        metadata.getOrDefault(METADATA_FILENAME, objectKey),
+        response.contentLength(),
+        response.contentType(),
+        objectKey,
+        parseTimestamp(metadata.get(METADATA_CREATED_AT)));
+  }
 
   private Tagging buildTagging(Map<String, String> tags) {
     List<Tag> tagList =
         tags.entrySet().stream()
             .map(entry -> Tag.builder().key(entry.getKey()).value(entry.getValue()).build())
-            .collect(Collectors.toList());
+            .toList();
     return Tagging.builder().tagSet(tagList).build();
+  }
+
+  private Map<String, String> parseTags(String json) {
+    if (json == null || json.isBlank()) return Map.of();
+    try {
+      return objectMapper.readValue(json, new TypeReference<>() {});
+    } catch (Exception e) {
+      return Map.of();
+    }
   }
 
   private static OffsetDateTime parseTimestamp(String value) {
